name:                blog-post
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/blog-post#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Adapter.API
                        Adapter.SQL
                        Adapter.Sqlite
                        Core.Articles
                        Core.Interfaces
                        Core.Parsing
                        Core.Types
                        Core.Users
  build-depends:       base >= 4.7 && < 5
                     --, parsec >= 3.1.11 && < 4
                     , servant
                     , servant-client
                     , servant-server
                     , aeson >= 1.1
                     , mtl
                     , HDBC >=2.4 && <3.0
                     , HDBC-sqlite3 >= 2.3.3.1
                     , bytestring >= 0.10.8.1 && < 0.10.8.2
                     , yeshql >= 3.0.1.3
                     , attoparsec >=0.13.2.0
                     , text >= 1.2.2.2
                     , elm-export >= 0.6.0.1
                     , servant-elm >= 0.4.0.1
                     , warp >= 3.2.13
                     , wai-cors >= 0.2.5
                     , directory >= 1.3.1.5


  default-language:    Haskell2010

executable blog-post-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blog-post
  default-language:    Haskell2010

test-suite blog-post-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , blog-post
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/blog-post
